[gd_scene load_steps=22 format=3 uid="uid://b3auk4m02631h"]

[ext_resource type="Theme" uid="uid://b2qjv3opp3bvn" path="res://themes/button.tres" id="1_4k1nj"]
[ext_resource type="PackedScene" uid="uid://hnkq2jwyab2r" path="res://scenes/window_default.tscn" id="1_dn72j"]
[ext_resource type="Script" uid="uid://d20emwbl03f2" path="res://scripts/battle.gd" id="2_6vh42"]
[ext_resource type="Texture2D" uid="uid://cm8wfa0skmn6r" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[1].png" id="3_h4dll"]
[ext_resource type="Script" uid="uid://disjh21po3exr" path="res://scripts/menu.gd" id="3_lpir7"]
[ext_resource type="PackedScene" uid="uid://ckktytmxarw70" path="res://scenes/player_button.tscn" id="3_p1qf1"]
[ext_resource type="PackedScene" uid="uid://boe8min7878vu" path="res://scenes/enemy_button.tscn" id="4_a12nh"]
[ext_resource type="Texture2D" uid="uid://b5mgcom1fvsrf" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[9].png" id="4_p0caf"]
[ext_resource type="Texture2D" uid="uid://byejsten0xbd8" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[23].png" id="5_61i1y"]
[ext_resource type="Texture2D" uid="uid://cet8wynw8ttr3" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[37].png" id="6_saiin"]
[ext_resource type="Texture2D" uid="uid://cqqv00u37ybdq" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[51].png" id="7_dd63g"]
[ext_resource type="PackedScene" uid="uid://ck7plw4ipx3x" path="res://scenes/battle_player_bar.tscn" id="7_f4pi3"]
[ext_resource type="PackedScene" uid="uid://dwnj38cya8wjq" path="res://scenes/menucursor.tscn" id="8_f4pi3"]
[ext_resource type="Texture2D" uid="uid://bjlwm0f211b1u" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[65].png" id="8_fpf3k"]
[ext_resource type="Texture2D" uid="uid://crstjfgeh3wjq" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[79].png" id="9_bi5l8"]
[ext_resource type="Texture2D" uid="uid://l3guud5fa5vj" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[93].png" id="10_jt4d8"]
[ext_resource type="Texture2D" uid="uid://b6wl3oaxypp0j" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[107].png" id="11_kl6ie"]
[ext_resource type="Texture2D" uid="uid://d2ccu1fcarpv5" path="res://sprites/Background/bg-moshed-09-17-19-06-32-203[120].png" id="12_1m01a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lv4so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_h4dll")
}, {
"duration": 1.0,
"texture": ExtResource("4_p0caf")
}, {
"duration": 1.0,
"texture": ExtResource("5_61i1y")
}, {
"duration": 1.0,
"texture": ExtResource("6_saiin")
}, {
"duration": 1.0,
"texture": ExtResource("7_dd63g")
}, {
"duration": 1.0,
"texture": ExtResource("8_fpf3k")
}, {
"duration": 1.0,
"texture": ExtResource("9_bi5l8")
}, {
"duration": 1.0,
"texture": ExtResource("10_jt4d8")
}, {
"duration": 1.0,
"texture": ExtResource("11_kl6ie")
}, {
"duration": 1.0,
"texture": ExtResource("12_1m01a")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="Theme" id="Theme_f4pi3"]

[sub_resource type="Theme" id="Theme_yahae"]
Label/font_sizes/font_size = 16

[node name="Battle" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 3
theme = ExtResource("1_4k1nj")
script = ExtResource("2_6vh42")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(558, 356)
scale = Vector2(1.925, 1.605)
sprite_frames = SubResource("SpriteFrames_lv4so")
autoplay = "default"
frame = 9
frame_progress = 1.0

[node name="Enemies" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("3_lpir7")

[node name="EnemyButton" parent="Enemies" instance=ExtResource("4_a12nh")]
layout_mode = 0
offset_left = 36.0
offset_top = 236.0
offset_right = 76.0
offset_bottom = 276.0
scale = Vector2(3, 3)
focus_neighbor_left = NodePath("../EnemyButton2")
focus_neighbor_top = NodePath("../EnemyButton2")
focus_neighbor_right = NodePath("../EnemyButton2")
focus_neighbor_bottom = NodePath("../EnemyButton2")

[node name="EnemyButton2" parent="Enemies" instance=ExtResource("4_a12nh")]
layout_mode = 0
offset_left = 228.0
offset_top = 356.0
offset_right = 268.0
offset_bottom = 396.0
scale = Vector2(3, 3)
focus_neighbor_left = NodePath("../EnemyButton3")
focus_neighbor_top = NodePath("../EnemyButton3")
focus_neighbor_right = NodePath("../EnemyButton3")
focus_neighbor_bottom = NodePath("../EnemyButton3")

[node name="EnemyButton3" parent="Enemies" instance=ExtResource("4_a12nh")]
layout_mode = 0
offset_left = 84.0
offset_top = 364.0
offset_right = 124.0
offset_bottom = 404.0
scale = Vector2(3, 3)
focus_neighbor_left = NodePath("../EnemyButton4")
focus_neighbor_top = NodePath("../EnemyButton4")
focus_neighbor_right = NodePath("../EnemyButton4")
focus_neighbor_bottom = NodePath("../EnemyButton4")

[node name="EnemyButton4" parent="Enemies" instance=ExtResource("4_a12nh")]
layout_mode = 0
offset_left = 188.0
offset_top = 212.0
offset_right = 228.0
offset_bottom = 252.0
scale = Vector2(3, 3)
focus_neighbor_left = NodePath("../EnemyButton")
focus_neighbor_top = NodePath("../EnemyButton")
focus_neighbor_right = NodePath("../EnemyButton")
focus_neighbor_bottom = NodePath("../EnemyButton")
button_mask = 3

[node name="Players" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_lpir7")

[node name="PlayerButton" parent="Players" instance=ExtResource("3_p1qf1")]
layout_mode = 0
offset_left = 643.0
offset_top = 24.0
offset_right = 683.0
offset_bottom = 64.0
scale = Vector2(4.45033, 3.99838)

[node name="PlayerButton2" parent="Players" instance=ExtResource("3_p1qf1")]
layout_mode = 0
offset_left = 854.0
offset_top = 105.0
offset_right = 894.0
offset_bottom = 145.0
scale = Vector2(4.45033, 3.99838)

[node name="PlayerButton3" parent="Players" instance=ExtResource("3_p1qf1")]
layout_mode = 0
offset_left = 658.0
offset_top = 218.0
offset_right = 698.0
offset_bottom = 258.0
scale = Vector2(4.45033, 3.99838)

[node name="PlayerButton4" parent="Players" instance=ExtResource("3_p1qf1")]
layout_mode = 0
offset_left = 865.0
offset_top = 339.0
offset_right = 905.0
offset_bottom = 379.0
scale = Vector2(4.45033, 3.99838)

[node name="GUIMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
offset_left = 1.0
offset_top = 534.0
offset_right = 901.0
offset_bottom = 586.0
scale = Vector2(3.73354, 3.30549)

[node name="Bottom" type="HBoxContainer" parent="GUIMargin"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="Enemies" parent="GUIMargin/Bottom" instance=ExtResource("1_dn72j")]
custom_minimum_size = Vector2(80, 48)
layout_mode = 2
size_flags_horizontal = 1
size_flags_stretch_ratio = 3.42
theme = SubResource("Theme_f4pi3")

[node name="MarginContainer" type="MarginContainer" parent="GUIMargin/Bottom/Enemies"]
layout_mode = 0
offset_left = 3.55378
offset_top = -0.424465
offset_right = 107.554
offset_bottom = 67.5755
scale = Vector2(0.694431, 0.705902)

[node name="VBoxContainer" type="VBoxContainer" parent="GUIMargin/Bottom/Enemies/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="GUIMargin/Bottom/Enemies/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_yahae")
text = "Enemy"

[node name="Label4" type="Label" parent="GUIMargin/Bottom/Enemies/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
text = "Enemy"

[node name="Label3" type="Label" parent="GUIMargin/Bottom/Enemies/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
text = "Enemy"

[node name="Label2" type="Label" parent="GUIMargin/Bottom/Enemies/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
text = "Enemy"

[node name="Players" parent="GUIMargin/Bottom" instance=ExtResource("1_dn72j")]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource("1_4k1nj")

[node name="MarginContainer" type="MarginContainer" parent="GUIMargin/Bottom/Players"]
layout_mode = 0
offset_left = 7.80486
offset_top = 1.42518
offset_right = 258.805
offset_bottom = 70.4252
scale = Vector2(0.7207, 0.673467)
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="HBoxContainer" parent="GUIMargin/Bottom/Players/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="PlayerInfoBar" parent="GUIMargin/Bottom/Players/MarginContainer/VBoxContainer" instance=ExtResource("7_f4pi3")]
layout_mode = 2

[node name="PlayerInfoBar2" parent="GUIMargin/Bottom/Players/MarginContainer/VBoxContainer" instance=ExtResource("7_f4pi3")]
layout_mode = 2

[node name="PlayerInfoBar3" parent="GUIMargin/Bottom/Players/MarginContainer/VBoxContainer" instance=ExtResource("7_f4pi3")]
layout_mode = 2

[node name="PlayerInfoBar4" parent="GUIMargin/Bottom/Players/MarginContainer/VBoxContainer" instance=ExtResource("7_f4pi3")]
layout_mode = 2

[node name="Options" parent="." instance=ExtResource("1_dn72j")]
custom_minimum_size = Vector2(80, 48)
layout_mode = 2
offset_left = 157.0
offset_top = 542.0
offset_right = 237.0
offset_bottom = 590.0
scale = Vector2(1.82163, 3.30711)

[node name="Options" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.29375
offset_top = 4.48891
offset_right = 21.2937
offset_bottom = 64.4889
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.758816, 0.374395)
script = ExtResource("3_lpir7")

[node name="Button" type="Button" parent="Options/Options"]
layout_mode = 2
theme = ExtResource("1_4k1nj")
theme_override_font_sizes/font_size = 24
text = "Fight"

[node name="Button4" type="Button" parent="Options/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Special"

[node name="Button2" type="Button" parent="Options/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Item"

[node name="Button3" type="Button" parent="Options/Options"]
layout_mode = 2
theme = ExtResource("1_4k1nj")
theme_override_font_sizes/font_size = 24
text = "Defend"

[node name="MenuCursor" parent="." instance=ExtResource("8_f4pi3")]
layout_mode = 0
offset_left = -166.0
offset_top = 605.0
offset_right = -150.0
offset_bottom = 621.0
scale = Vector2(3.79126, 3.44822)

[connection signal="button_pressed" from="Enemies" to="." method="_on_enemies_button_pressed"]
[connection signal="button_pressed" from="Players" to="." method="_on_players_button_pressed"]
[connection signal="button_pressed" from="Options/Options" to="." method="_on_options_button_pressed"]
